# FunctionPro

./: CMakeLists.txt  README.md
benchmarks/: bench_all.cpp  bench_function.cpp  bench_function_ref.cpp  bench_helper.h  bench_move_only_function.cpp  benchmark_all.cpp  benchmark_function.cpp  benchmark_function_ref.cpp  benchmark_helper.h  benchmark_move_only_function.cpp
cmake/: FunctionProConfig.cmake.in
docs/: Architecture.md
examples/: example_all.cpp  example_function.cpp  example_function_ref.cpp  example_helper.h  example_move_only_function.cpp
include/FunctionPro/: Function.h  Function.tpp  FunctionRef.h  FunctionRef.tpp  MoveOnlyFunction.h  MoveOnlyFunction.tpp
include/FunctionPro/Detail/: CallableStorage.h  SBOTraits.h  VTable.h  VTableFactory.h
include/detail/: SBOTraits.h  Storage.h  VTable.h  VTableFactory.h
include/function/: Function.h  MoveOnlyFunction.h  MoveOnlyFunction.tpp
tests/: test_all.cpp  test_function.cpp  test_function_ref.cpp  test_helper.h  test_move_only_function.cpp
